--- a/templates/html/single-project.html
+++ b/templates/html/single-project.html
@@ -232,7 +232,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="page-title-content">
-                        <h3 class="title">Single-Project</h3>
+                        <h3 class="title">{{projects.projectname}}</h3>
                         <nav aria-label="breadcrumb">
                         </nav>
                     </div>
@@ -263,7 +263,7 @@
             <div class="row">
                 <div class="col-lg-7">
                     <div class="project-details-thumb">
-                        <img src="{% static 'assets/images/single-project-thumb.jpg' %}" alt="">
+                        <img src="../../media/{{projects.image_uploaded}}" alt="">
                         <div class="icon">
                             <i class="fa fa-heart"></i>
                         </div>
@@ -278,7 +278,7 @@
                                 <p>United Kingdom</p>
                             </div>
                         </div>
-                        <h3 class="title">A New Super Car on Your Wrist</h3>
+                        <h3 class="title">{{projects.projectname}}</h3>
                         <div class="project-details-item">
                             <div class="item text-center">
                                 <h5 class="title">$2203</h5>
@@ -289,7 +289,7 @@
                                 <span>Backers</span>
                             </div>
                             <div class="item text-center">
-                                <h5 class="title">20</h5>
+                                <h5 class="title">2{{ projects.deadline }}0</h5>
                                 <span>Days Left</span>
                             </div>
                         </div>
@@ -303,7 +303,7 @@
                             </div>
                         </div>
                         <div class="projects-goal">
-                            <span>Goal: <span>3600.00 USD</span></span>
+                            <span>Goal: <span>{{projects.goal}} Gwei</span></span>
                         </div>
                         <div class="project-btn mt-25">
                             <a class="main-btn" href="#">Back this project</a>
@@ -350,7 +350,7 @@
                     <div class="tab-content" id="pills-tabContent">
                         <div class="tab-pane fade show active" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab">
                             <div class="project-details-content-top">
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent vulputate sed mauris vitae pellentesque. Nunc ut ullamcorper libero. Aenean fringilla mauris quis risus laoreet interdum. Quisque imperdiet orci in metus aliquam egestas. Fusce elit libero, imperdiet nec orci quis, convallis hendrerit nisl. Cras auctor nec purus at placerat.</p>
+                                <p>{{projects.projectdscp}}</p>
                                 <ul>
                                     <li><i class="flaticon-check"></i>Nsectetur cing mauris quis risus laoreet elit.</li>
                                     <li><i class="flaticon-check"></i>Suspe ndisse dolor sit amet suscipit sagittis leo.</li>
